refactor: replace URL and Locale deprecated constructors